--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -88,4 +88,8 @@
 
 - name:
     - the author
-    def: the person who wrote Last Odyssey.  if you're interested in her thoughts or her progress on making Last Odyssey, you can contact her at @selinedijon on Bluesky.
+    def: the person who wrote Last Odyssey.  if you're interested in her thoughts or her progress on making Last Odyssey, you can check in on her by following @selinedijon on Bluesky.
+
+- name:
+    - FRP
+    def: Facilitated Role Play, a type of game in which a group of players act out a narrative that is refereed and augmented by a group of one or more assisting game masters.
